--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
     </table>
     <hr>
     <h3><strong><em>Skills</em></strong></h3>
+    
+    <ul>
+      <li><strong>Hardware Troubleshooting 5/5</strong></li>
+      <li><strong>Software Troubleshooting 5/5</strong></li>
+      <li><strong>Excel  4/5</strong></li>
+      <li><strong>Basic Networking and Troubleshooting 5/5</strong></li>
+      <li><strong>MySql Query Scripting 3/5 </strong></li>
+      <li><strong>Basic Linux Desktop Troubleshooting and Software Maintenance 3/5</strong></li>
+      <li><strong>Barter POS 4/5</strong></li>
+    </ul>
 
   <!-- NOTE:   <table border="1">
       <tr>
@@ -65,7 +75,7 @@
     </table>
 
     <hr>  -->
-    <table  cellspacing = "5">
+   <!-- NOTE:  <table  cellspacing = "5">
     <tr>
       <td>
         MySQL ✨✨✨✨✨
@@ -82,7 +92,7 @@
         Software Troubleshoting ✨✨✨✨✨
       </td>
     </tr>
-    </table>
+    </table> -->
     <hr>
       <h3>Work Experience</h3>
           <table border="1">
